--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@composer-kit/ui": "^0.0.2",
     "@headlessui/react": "^2.1.10",
     "@heroicons/react": "^2.1.5",
     "@radix-ui/react-icons": "^1.3.1",
