rent page integration

--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -22,8 +22,9 @@
     "clsx": "^2.1.1",
     "encoding": "^0.1.13",
     "eslint-config-next": "^15.0.2",
-    "ethers": "^6.13.4",
+    "ethers": "^5.8.0",
     "html5-qrcode": "^2.3.8",
+    "ipfs-http-client": "^60.0.1",
     "lucide-react": "^0.454.0",
     "next": "^15.0.2",
     "pino-pretty": "^11.3.0",
