--- a/packages/react-app/.env.template
+++ b/packages/react-app/.env.template
@@ -1,2 +1,7 @@
 # Wallet Connect ID needed to run the project. You can create one here: https://cloud.walletconnect.com/sign-in
 WC_PROJECT_ID=""
+
+
+NEXT_PUBLIC_PINATA_API_KEY=your_api_key_here
+NEXT_PUBLIC_PINATA_SECRET_KEY=your_secret_key_here
+NEXT_PUBLIC_PINATA_JWT=your_jwt_token_here
