--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -18,6 +18,7 @@
     "@rainbow-me/rainbowkit": "^2.2.0",
     "@tanstack/react-query": "^5.59.16",
     "@wagmi/connectors": "5.3.3",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "encoding": "^0.1.13",
